* armv64/32bit removal Removed code related to 32 bit. Following left by purpose: - combo-boxes with only one Arm64 options; - code gen protected methods that now return direct value without marshaling;
Leftovers: libllvm might be re-build by eliminating 32bit code generation